Adjusted the licence dropdown menu to align with other inputs in the same page. See cmn 91 of issue 878.

--- a/trunk/gbif-ipt/src/main/webapp/styles/main.css
+++ b/trunk/gbif-ipt/src/main/webapp/styles/main.css
@@ -757,6 +757,8 @@ div#Additional-Metadata {
   margin-bottom: 20px;
   border-bottom: 1px dotted #999;
 }
+div#Additional-Metadata select { margin-left: 7px; }
+
 div#Alternative-Identifiers {
   margin-top: 20px;  
 }
